# new_muzloc

./: README.md  config.ini  create_db.py  input_db.py  load_profile.py  main.py  pyproject.toml
static/: edit_profile.js  registration.js  script.js  styles.css  user.js  user_styles.css
templates/: edit_profile.html  index.html  new_user_confirmation.html  registration.html  user.html
